--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,13 +3,31 @@
   <% } %>
 </head>
 <body>
-  <nav>
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgba(167, 39, 20, 1);">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item px-3">
+            <a class="nav-link" href="">Heroes</a>
+          </li>
+          <li class="nav-item px-3">
+            <a class="nav-link" href="">Create Guide</a>
+          </li>
+          <li class="nav-item px-3">
+            <a class="nav-link" href="">Profiles</a>
+          </li>
+        </ul>
+      </div>
+    </div>
     <% if (user) { %>
-      <a href="/auth/logout">
+      <a href="/auth/logout" class="px-3">
         <button type="submit">Logout</button>
       </a>
     <% } else { %>
-      <a href="/auth/google" class="siwg-link">
+      <a href="/auth/google" class="siwg-link px-3">
         <button type="submit" class="siwg">
           <img id="siwg-image" alt="Sign in with Google" />
         </button>
