--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -11,7 +11,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item px-3">
-            <a class="nav-link" href="">Heroes</a>
+            <a class="nav-link" href="/heroes">Heroes</a>
           </li>
           <li class="nav-item px-3">
             <a class="nav-link" href="">Create Guide</a>
