--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -17,7 +17,7 @@
             <a class="nav-link" href="">Create Guide</a>
           </li>
           <li class="nav-item px-3">
-            <a class="nav-link" href="">Profiles</a>
+            <a class="nav-link" href="">User Profiles</a>
           </li>
         </ul>
       </div>
