add view for create new guide, add controller function for /guides/new

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -14,7 +14,7 @@
             <a class="nav-link" href="/heroes">Heroes</a>
           </li>
           <li class="nav-item px-3">
-            <a class="nav-link" href="">Create Guide</a>
+            <a class="nav-link" href="/guides/new">Create Guide</a>
           </li>
           <li class="nav-item px-3">
             <a class="nav-link" href="">User Profiles</a>
