--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
       />
     </div>
   <% } %>
+  <a class="mt-5 btn btn-primary" href="/heroes">Go to Heroes</a>
 </main>
 
 <%- include('./partials/footer') %>
