--- a/views/guides/new.ejs
+++ b/views/guides/new.ejs
@@ -5,7 +5,7 @@
 <main>
   <h1 class="my-4">Create New Guide</h1>
 
-  <form action="">
+  <form action="/guides" method="POST">
     <div class="container-fluid overflow-auto my-4">
       <div class="row justify-content-center">
         <% heroes.forEach((hero) => { %>
@@ -24,7 +24,13 @@
         <% }) %>
       </div>
     </div>
-    <button type="submit">Submit Guide</button>
+    <div class="container">
+      <div class="row">
+        <div class="col text-center">
+          <button type="submit">Submit Guide</button>
+        </div>
+      </div>
+    </div>
   </form>
 
 </main>
