--- a/views/heroes/index.ejs
+++ b/views/heroes/index.ejs
@@ -44,7 +44,7 @@
                 <h3 class="card-title">
                   <%= results[hero].localized_name.split("_").join(" ") %>
                 </h3>
-                <form action="/heroes" method="post">
+                <form action="/heroes" method="POST">
                   <input 
                     hidden 
                     type="text" 
