--- a/views/guides/new.ejs
+++ b/views/guides/new.ejs
@@ -25,26 +25,66 @@
       </div>
     </div>
 
-    <div class="container py-4">
+    <div class="container-fluid py-4 px-5">
       <div class="row">
-        <div class="col text-center overflow-auto item-container">
+        <div class="col text-center">
           <h2>Starting Items</h2>
-          <% results.forEach((item) => { %>
-            <div class="card col-4 text-center">
-              <img src="<%= item[1].images.lg %> " alt="dota2 item thumbnail">
-              <div class="card-body">
-                <h5 class="card-title">
-                  <%= item[1].localized_name.split("_").join(" ") %>
-                </h5>
-              </div>
-            </div>
-          <% }) %>
         </div>
         <div class="col text-center">
           <h2>Core Items</h2>
         </div>
         <div class="col text-center">
           <h2>Situational Items</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col overflow-auto item-container">
+          <div class="row">
+            <% results.forEach((item) => { %>
+              <div class="col-lg-2 col-sm-4">
+                <div class="card h-100 text-center">
+                  <img src="<%= item[1].images.lg %> " alt="dota2 item thumbnail">
+                  <div class="card-body">
+                    <h5 class="card-title">
+                      <%= item[1].localized_name.split("_").join(" ") %>
+                    </h5>
+                  </div>
+                </div>
+              </div>
+            <% }) %>
+          </div>
+        </div>
+        <div class="col overflow-auto item-container">
+          <div class="row">
+            <% results.forEach((item) => { %>
+              <div class="col-lg-2 col-sm-4">
+                <div class="card h-100 text-center">
+                  <img src="<%= item[1].images.lg %> " alt="dota2 item thumbnail">
+                  <div class="card-body">
+                    <h5 class="card-title">
+                      <%= item[1].localized_name.split("_").join(" ") %>
+                    </h5>
+                  </div>
+                </div>
+              </div>
+            <% }) %>
+          </div>
+        </div>
+        <div class="col overflow-auto item-container">
+          <div class="row">
+            <% results.forEach((item) => { %>
+              <div class="col-lg-2 col-sm-4">
+                <div class="card h-100 text-center">
+                  <img src="<%= item[1].images.lg %> " alt="dota2 item thumbnail">
+                  <div class="card-body">
+                    <h5 class="card-title">
+                      <%= item[1].localized_name.split("_").join(" ") %>
+                    </h5>
+                  </div>
+                </div>
+              </div>
+            <% }) %>
+          </div>
         </div>
       </div>
     </div>
