--- a/views/guides/new.ejs
+++ b/views/guides/new.ejs
@@ -43,11 +43,38 @@
             <% results.forEach((item) => { %>
               <div class="col-lg-2 col-sm-4">
                 <div class="card h-100 text-center">
-                  <img src="<%= item[1].images.lg %> " alt="dota2 item thumbnail">
+                  <img src="<%= item[1].images.lg %>" alt="dota2 item thumbnail">
                   <div class="card-body">
-                    <h5 class="card-title">
-                      <%= item[1].localized_name.split("_").join(" ") %>
-                    </h5>
+                    <div>
+                      <input
+                        type="checkbox" 
+                        name="include"
+                        >
+                        <input
+                          hidden
+                          type="text" 
+                          name="name"
+                          value="<%= item[1].localized_name %>"
+                        >
+                        <input
+                          hidden
+                          type="text" 
+                          name="imageUrl"
+                          value="<%= item[1].images.lg %>"
+                        >
+                        <input
+                          hidden
+                          type="number" 
+                          name="priority"
+                          value="0"
+                        >
+                        <input
+                          hidden
+                          type="number" 
+                          name="cost"
+                          value="<%= item[1].cost %>"
+                        >
+                    </div>
                   </div>
                 </div>
               </div>
@@ -61,9 +88,36 @@
                 <div class="card h-100 text-center">
                   <img src="<%= item[1].images.lg %> " alt="dota2 item thumbnail">
                   <div class="card-body">
-                    <h5 class="card-title">
-                      <%= item[1].localized_name.split("_").join(" ") %>
-                    </h5>
+                    <div>
+                      <input
+                        type="checkbox" 
+                        name="include"
+                        >
+                        <input
+                          hidden
+                          type="text" 
+                          name="name"
+                          value="<%= item[1].localized_name %>"
+                        >
+                        <input
+                          hidden
+                          type="text" 
+                          name="imageUrl"
+                          value="<%= item[1].images.lg %>"
+                        >
+                        <input
+                          hidden
+                          type="number" 
+                          name="priority"
+                          value="0"
+                        >
+                        <input
+                          hidden
+                          type="number" 
+                          name="cost"
+                          value="<%= item[1].cost %>"
+                        >
+                    </div>
                   </div>
                 </div>
               </div>
@@ -77,9 +131,36 @@
                 <div class="card h-100 text-center">
                   <img src="<%= item[1].images.lg %> " alt="dota2 item thumbnail">
                   <div class="card-body">
-                    <h5 class="card-title">
-                      <%= item[1].localized_name.split("_").join(" ") %>
-                    </h5>
+                    <div>
+                      <input
+                        type="checkbox" 
+                        name="include"
+                        >
+                        <input
+                          hidden
+                          type="text" 
+                          name="name"
+                          value="<%= item[1].localized_name %>"
+                        >
+                        <input
+                          hidden
+                          type="text" 
+                          name="imageUrl"
+                          value="<%= item[1].images.lg %>"
+                        >
+                        <input
+                          hidden
+                          type="number" 
+                          name="priority"
+                          value="0"
+                        >
+                        <input
+                          hidden
+                          type="number" 
+                          name="cost"
+                          value="<%= item[1].cost %>"
+                        >
+                    </div>
                   </div>
                 </div>
               </div>
