--- a/views/heroes/show.ejs
+++ b/views/heroes/show.ejs
@@ -19,10 +19,10 @@
     <% hero.guides.forEach((guide) => { %>
       <div class="row">
         <div class="col">
-          <h3><%= guide.name %> by <%= guide.author %></h3>
+          <h3><%= guide.name %> by <%= guide.author.name %></h3>
         </div>
         <div class="col">
-          <%= guide.coreItems %>
+          <%= guide.coreItems[0].name %>
         </div>
       </div>
     <% }) %> 
