updage hero show view, update guide controller create function to redirect to hero details page when new guide is created for that hero

--- a/public/stylesheets/heroes/show.css
+++ b/public/stylesheets/heroes/show.css
@@ -1,3 +1,23 @@
-.hero-portrait {
-  max-height: 30vh;
+.title {
+  font-size: 2.5rem;
+}
+
+.guide-header {
+  background-color: #AB2E17;
+}
+
+.guide-body {
+  background-color: white;
+}
+
+.guide-footer {
+
+}
+
+.guide-container {
+  max-height: 45vh;
+}
+
+.item-container {
+  max-height: 11.42vh;
 }
