--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <%- include('./partials/nav') %>
 
 <main>
-  <h1>Greetings, <%= user ? user.profile.name : "traveler" %></h1>
+  <h1 class="mt-4">Greetings, <%= user ? user.profile.name : "traveler" %></h1>
   <% if (user?.profile.avatar) { %>
     <div>
       <img
