--- a/views/heroes/index.ejs
+++ b/views/heroes/index.ejs
@@ -4,38 +4,41 @@
 
 <main>
   <h1 class="my-4">All Heroes</h1>
-
-  <div class="container my-4">
-    <div class="row row-cols-3 row-cols-lg-6 g-5 justify-content-center">
-      <% heroes.forEach((hero) => { %>
-        <div class="col">
-          <div class="card h-100 text-center">
-            <img src="<%= hero.imageUrl %>" alt="dota2 hero portrait">
-            <div class="card-body">
-              <h2 class="card-title">
-                <%= hero.name.split("_").join(" ") %> 
-              </h2>
-              <p><%= hero.guides.length %> Guides Available</p>
-              <a 
-                href="/heroes/<%= hero._id %>"
-                class="btn btn-primary"
-              >
-                Details
-              </a>
+  <% if (heroes.length) {%>
+    <div class="container my-4">
+      <div class="row row-cols-3 row-cols-lg-6 g-5 justify-content-center">
+        <% heroes.forEach((hero) => { %>
+          <div class="col">
+            <div class="card h-100 text-center">
+              <img src="<%= hero.imageUrl %>" alt="dota2 hero portrait">
+              <div class="card-body d-flex flex-column">
+                <h2 class="card-title">
+                  <%= hero.name.split("_").join(" ") %> 
+                </h2>
+                <p class="mt-auto"><%= hero.guides.length %> Guides Available</p>
+                <a 
+                  href="/heroes/<%= hero._id %>"
+                  class="btn btn-primary mt-auto"
+                >
+                  Details
+                </a>
+              </div>
             </div>
           </div>
-        </div>
-      <% }) %>
+        <% }) %>
+      </div>
     </div>
-  </div>
+  <% }else { %>
+    <h2 class="mt-4">No Heroes Yet</h2>
+  <% } %> 
 
   <% if(!user) {%>
-    <h2 class="notification my-3">Login to add a new Hero</h2>
+    <h2 class="notification mt-4">Login to add a new Hero</h2>
   <% } %>
 
   <% if (user) { %>
     <p>
-      <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-heroes" aria-expanded="false" aria-controls="collapse-heroes">
+      <button class="btn btn-primary mt-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-heroes" aria-expanded="false" aria-controls="collapse-heroes">
         Show Available Heroes
       </button>
     </p>
