--- a/views/heroes/index.ejs
+++ b/views/heroes/index.ejs
@@ -5,7 +5,7 @@
 <main>
   <h1 class="my-4">All Heroes</h1>
   <% if (heroes.length) {%>
-    <div class="container my-4">
+    <div class="container created-heroes-container my-4">
       <div class="row row-cols-3 row-cols-lg-6 g-5 justify-content-center">
         <% heroes.forEach((hero) => { %>
           <div class="col">
@@ -43,7 +43,7 @@
       </button>
     </p>
     <div class="collapse" id="collapse-heroes">
-      <div class="container">
+      <div class="container all-heroes-container">
       <div class="row row-cols-3 row-cols-lg-6 g-3">
         <% Object.keys(results).sort().forEach((hero) => { %>
           <div class="col">
