--- a/views/heroes/show.ejs
+++ b/views/heroes/show.ejs
@@ -28,7 +28,7 @@
   <% if (hero.guides.length) { %> 
     <div class="container overflow-auto guide-container mt-2">
       <% hero.guides.forEach((guide) => { %>
-        <div class="row mt-5 hero-guide guide-header">
+        <div class="row mt-4 hero-guide guide-header">
           <div class="col-9">
             <h4>
               <span class="title"><%= guide.name %></span>
@@ -87,13 +87,28 @@
             </div>
           </div>
         </div>
-      <% }) %> 
+        <% if (guide.author.equals(user?.profile._id)) { %>
+          <div class="row guide-footer">
+            <div class="col-6 text-center">
+              <form action="/guides/<%= guide.id %>/edit" method="GET">
+                <button class="p-2 m-2" type="submit">Edit</button>
+              </form>
+            </div>
+            <div class="col-6 text-center">
+              <form action="/guides/<%= guide.id %>?_method=DELETE" method="POST">
+                <input hidden type="text" name="heroId" value="<%= hero._id %>">
+                <button class="p-2 m-2" type="submit">Delete</button>
+              </form>
+            </div>
+          </div>
+        <% } %>
+      <% }) %>
     </div>
   <% }else { %>
     <div class="container text-center mt-4">
       <h1>No Guides Yet</h1>
     </div>
-  <% } %> 
+  <% } %>
 
 </main>
 
