--- a/public/stylesheets/guides/new.css
+++ b/public/stylesheets/guides/new.css
@@ -3,7 +3,7 @@
 }
 
 .container {
-  max-width: 80vw;
+  max-width: 63vw;
 }
 
 .item-container {
@@ -16,4 +16,26 @@
 
 .form-floating {
   max-width: 20vw;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.item-container::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.item-container {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hero-container::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hero-container {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
