--- a/public/stylesheets/heroes/show.css
+++ b/public/stylesheets/heroes/show.css
@@ -1,5 +1,6 @@
 .title {
   font-size: 2.5rem;
+  padding: 0.5rem;
 }
 
 .guide-header {
@@ -11,7 +12,7 @@
 }
 
 .guide-footer {
-
+  background-color: rgba(171, 46, 23, 0.7);
 }
 
 .guide-container {
@@ -20,4 +21,26 @@
 
 .item-container {
   max-height: 11.42vh;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.item-container::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.item-container {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.guide-container::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.guide-container {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
