--- a/views/heroes/index.ejs
+++ b/views/heroes/index.ejs
@@ -12,7 +12,7 @@
             <div class="card h-100 text-center">
               <img src="<%= hero.imageUrl %>" alt="dota2 hero portrait">
               <div class="card-body d-flex flex-column">
-                <h2 class="card-title">
+                <h2 class="card-title mt-auto">
                   <%= hero.name.split("_").join(" ") %> 
                 </h2>
                 <p class="mt-auto"><%= hero.guides.length %> Guides Available</p>
@@ -43,36 +43,36 @@
       </button>
     </p>
     <div class="collapse" id="collapse-heroes">
-      <div class="container all-heroes-container">
-      <div class="row row-cols-3 row-cols-lg-6 g-3">
-        <% Object.keys(results).sort().forEach((hero) => { %>
-          <div class="col">
-            <div class="card h-100 text-center">
-              <img src="<%= results[hero].images.full %>" alt="dota2 hero portrait">
-              <div class="card-body">
-                <h3 class="card-title">
-                  <%= results[hero].localized_name.split("_").join(" ") %>
-                </h3>
-                <form action="/heroes" method="POST">
-                  <input 
-                    hidden 
-                    type="text" 
-                    name="name" 
-                    value="<%= results[hero].localized_name %>"
-                  >
-                  <input 
-                    hidden 
-                    type="text" 
-                    name="imageUrl" 
-                    value="<%= results[hero].images.vert %>"
-                  >
-                  <button class="btn btn-primary" type="submit">Add Hero</button>
-                </form>
+      <div class="container all-heroes-container overflow-auto">
+        <div class="row row-cols-3 row-cols-lg-6 g-3">
+          <% Object.keys(results).sort().forEach((hero) => { %>
+            <div class="col">
+              <div class="card h-100 text-center">
+                <img src="<%= results[hero].images.full %>" alt="dota2 hero portrait">
+                <div class="card-body d-flex flex-column">
+                  <h3 class="card-title mt-auto">
+                    <%= results[hero].localized_name.split("_").join(" ") %>
+                  </h3>
+                  <form action="/heroes" method="POST">
+                    <input 
+                      hidden 
+                      type="text" 
+                      name="name" 
+                      value="<%= results[hero].localized_name %>"
+                    >
+                    <input 
+                      hidden 
+                      type="text" 
+                      name="imageUrl" 
+                      value="<%= results[hero].images.vert %>"
+                    >
+                    <button class="btn btn-primary mt-auto" type="submit">Add Hero</button>
+                  </form>
+                </div>
               </div>
             </div>
-          </div>
-        <% }); %> 
-      </div>
+          <% }); %> 
+        </div>
       </div>
     </div>
   <% } %>
