add route controller and view to show all profiles on profiles index view

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -17,7 +17,7 @@
             <a class="nav-link" href="/guides/new">Create Guide</a>
           </li>
           <li class="nav-item px-3">
-            <a class="nav-link" href="">User Profiles</a>
+            <a class="nav-link" href="/profiles">User Profiles</a>
           </li>
         </ul>
       </div>
