--- a/public/stylesheets/heroes/show.css
+++ b/public/stylesheets/heroes/show.css
@@ -3,6 +3,15 @@
   padding: 0.5rem;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  color: whitesmoke;
+}
+
 .guide-header {
   background-color: #AB2E17;
 }
