--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -3,38 +3,102 @@
 <%- include('../partials/nav') %>
 
 <main>
-  <h1 class="my-4">Users</h1>
 
-  <div class="row">
-    <% profiles.forEach((profile) => { %>
-      <div class="col">
-        <a href="/profiles/<%= profile._id %>" class="text-decoration-none">
-          <div class="card text-center">
-            <div class="row g-0 align-items-center">
-              <div class="col-md-4">
-                <% if (profile.avatar) { %>
-                  <img
-                    src="<%= profile.avatar %>"
-                    alt="<%= profile.name %>'s avatar"
-                  />
-                <% }else {%>
-                  <img
-                    src="https://picsum.photos/96"
-                    alt="A placeholder avatar"
-                  />
-                <% } %>
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h2 class="card-title"><%= profile.name %></h2>
-                </div>
+  <div class="d-flex justify-content-center mt-5">
+    <% if (profile.avatar) { %>
+      <div>
+        <img 
+          class="profile-avatar"
+          src="<%= profile.avatar %>" 
+          alt="<%= profile.name %> avatar"
+        >
+      </div>
+    <% } %>
+  </div>
+
+  <% if (profile.guides.length) { %> 
+    <div class="container overflow-auto guide-container mt-2">
+      <% profile.guides.forEach((guide) => { %>
+        <div class="row mt-4 hero-guide guide-header">
+          <div class="col-9">
+            <h4>
+              <span class="title"><%= guide.name %></span>
+            </h4>
+          </div>
+          <div class="col-3 d-flex justify-content-end align-items-end">
+            <h5>
+              Last Updated:
+              <%= guide.updatedAt.toISOString().split("T")[0] %>
+            </h5>
+          </div>
+        </div>
+        <div class="row guide-body">
+          <div class="col">
+            <div class="container">
+              <div class="row p-2 overflow-auto item-container">
+                <h4>Starting</h4>
+                <% guide.startingItems.forEach((item) => { %>
+                  <div class="col-lg-2 col-md-3 col-md-4 ">
+                    <div class="card h-100 text-center">
+                      <img src="<%= item.imageUrl %>" alt="dota2 item thumbnail">
+                    </div>
+                  </div>
+                <% }) %>
               </div>
             </div>
           </div>
-        </a>
-      </div>
-    <% }) %> 
-  </div>
+          <div class="col">
+            <div class="container">
+              <div class="row p-2 overflow-auto item-container">
+                <h4>Core</h4>
+                <% guide.coreItems.forEach((item) => { %>
+                  <div class="col-lg-2 col-md-3 col-md-4 ">
+                    <div class="card h-100 text-center">
+                      <img src="<%= item.imageUrl %>" alt="dota2 item thumbnail">
+                    </div>
+                  </div>
+                <% }) %>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="container">
+              <div class="row p-2 overflow-auto item-container">
+                <h4>Situational</h4>
+                <% guide.situationalItems.forEach((item) => { %>
+                  <div class="col-lg-2 col-md-3 col-md-4 ">
+                    <div class="card h-100 text-center">
+                      <img src="<%= item.imageUrl %>" alt="dota2 item thumbnail">
+                    </div>
+                  </div>
+                <% }) %>
+              </div> 
+            </div>
+          </div>
+        </div>
+        <% if (guide.author.equals(profile._id)) { %>
+          <div class="row guide-footer">
+            <div class="col-6 text-center">
+              <form action="/guides/<%= guide.id %>/edit" method="GET">
+                <button class="p-2 m-2" type="submit">Edit</button>
+              </form>
+            </div>
+            <div class="col-6 text-center">
+              <form action="/guides/<%= guide.id %>?_method=DELETE" method="POST">
+                <input hidden type="text" name="heroId" value="<%= guide.hero %>">
+                <button class="p-2 m-2" type="submit">Delete</button>
+              </form>
+            </div>
+          </div>
+        <% } %>
+      <% }) %>
+    </div>
+  <% }else { %>
+    <div class="container text-center mt-4">
+      <h1>No Guides Yet</h1>
+    </div>
+  <% } %>
+
 </main>
 
 <%- include('../partials/footer') %>
